# 20250718-LegacyMind

./: .gitignore  CCD_CLAUDE.md  CLAUDE.md  Makefile  SYSTEM_STATUS.md  background_embedding_service.py  background_embedding_service_with_sam.py  check_ccb_documents.py  check_identity_storage.py  check_metadata_docs.py  check_relationship_docs.py  com.legacymind.embedding.plist  debug_identity_fields.py  debug_identity_serialization.py  docker-compose.yml  embedding_service_control.sh  embedding_service_state.json  find_malformed_docs.py  sam_embedding_service.py  start_background_service.py  test-direct-transaction.js  test-redis-multi.js  test-uk-create.sh  test-uk-embedding-logs.js  test-uk-mcp-protocol.sh  test-uk-mcp.sh  test-uk-ticket-creation.js  test-uk-ticket-logs.js  test_direct_identity.py  test_doc_retrieval.py  test_identity_creation.py  test_identity_response_serde.rs  test_sam_embedding.py  test_serde_untagged.py  test_ui_identity_call.py  trace_identity_construction.py  unified_mind_wrapper.py  verify_metadata_conflict.py
MCP-UnifiedThinking/: Cargo.toml  test_mcp.sh  test_mcp_complete.py  test_mcp_debug.py  test_mcp_proper.py
MCP-UnifiedThinking/src/: lib.rs  main.rs  models.rs  service.rs
MCP-UnifiedThinking/src/frameworks/: first_principles.rs  mod.rs  socratic.rs
MCP-UnifiedThinking/src/storage/: redis_pool.rs
MCP-UnifiedThinking/src/tools/: think.rs
MCPs/InternalMCPs/unified-intelligence-rust/: Cargo.toml  README.md
bot-cli/: Cargo.toml
bot-cli/src/: main.rs
obsidian-mcp/: Cargo.toml  FRONTMATTER_ENHANCEMENT.md  README.md  obsidian-mcp.toml
obsidian-mcp/src/: config.rs  error.rs  handlers.rs.old  lib.rs  main.rs  models.rs  service.rs  vault.rs  wikilink.rs
obsidian-mcp/test_vault/: Welcome.md  existing-with-frontmatter.md  plain-note.md  wikilink-examples.md
obsidian-mcp/test_vault/test_metadata/: sample.md
obsidian-mcp/tests/: integration_test.rs
unified-intelligence/: Cargo.toml  Dockerfile.embedding-service  EVENT_STREAMING.md  OPENAI_API_KEY_SETUP.md  PHASE1_IMPLEMENTATION_SUMMARY.md  REDIS_SECURITY_FIX.md  REDIS_SIMPLIFICATION_SUMMARY.md  REPOSITORY_REFACTORING_SUMMARY.md  Rust_Expert_Context  VECTOR_SEARCH_README.md  analyze_embedding_issues.py  background_embedding_daemon.py  background_embedding_service.py  background_service_v3.py  backup_qdrant.py  batch_embeddings.py  build.rs  check_api_key.py  check_embeddings.py  check_events.py  check_groq_api.py  check_identity_structure.py  check_redis_data.py  check_redis_identity.py  check_streams.py  config.yaml  cooccurrence_analyzer.py  debug_async_issue.py  debug_daemon.py  debug_identity_retrieval.py  debug_recent_events.py  debug_redis_types.py  debug_server.py  debug_specific_error.py  debug_timestamp.py  delete_cci_ccd_collections.py  drop_search_index.py  dump.rdb  embedding_service_with_fallback.py  federation_embedding_service.py  (+65 more)
unified-intelligence/docs/: bloom_filter_implementation.md  redis_8_features.md
unified-intelligence/examples/: hash_expiration_demo.rs
unified-intelligence/python/: unified_intelligence_embedding_worker.py  unified_intelligence_vector_service.py
unified-intelligence/src/: error.rs  frameworks.rs  handlers.rs  identity_documents.rs  lua_scripts.rs  main.rs  main_original.rs  main_simple.rs  models.rs  rate_limit.rs  redis.rs  redisvl_service.rs  repository.rs  search_enhancements.rs  search_optimization.rs  service.rs  test_identity_serde.rs  validation.rs  vector_service.rs  visual.rs
unified-intelligence/src/repository/: mod.rs  redis_impl.rs  test_mock.rs  traits.rs
unified-intelligence/test-scripts/: TEST_GUIDE.md  manual_rate_test.sh  minimal_test.py  test_comprehensive.sh  test_debug.sh  test_interactive.py  test_mcp.py  test_minimal.sh  test_phase1.sh  test_phase3.sh  test_rate_limit.py  test_recall_enhanced.py  test_robust.py  test_search.jsonl  test_simple_think.jsonl  test_with_nc.sh
unified-mind/: .gitignore  ARCHITECTURE.md  COMPILATION_FIXES.md  Cargo.toml  README.md  check_interventions.py  example_usage.md  install.sh  test_conversation_monitoring.py  test_mcp.sh  test_mcp_init.py  test_redis_connection.py  test_um.sh  test_unified_mind.py  test_with_monitor.py  verify_monitoring.py
unified-mind/docs/: INTERNAL_DIALOGUE_IMPLEMENTATION.md  integrated_monitoring.md  internal_dialogue_design.md
unified-mind/examples/: internal_dialogue_demo.md  internal_dialogue_demo.rs
unified-mind/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  redis.rs  service.rs
unified-mind/src/dialogue/: dialogue_types.rs  generator.rs  mod.rs  natural_voice.rs  pattern_detector.rs  voice_patterns.rs
unified-mind/src/monitor/: mod.rs  (+3 more)
unified-mind/tests/: test_integrated_monitor.rs
unified-think/: .env.example  BLOOM_FILTER_UPDATE.md  CCMCP-REVIEW-REFACTORED.md  CODE_REVIEW.md  Cargo.toml  HANDOFF_DOCUMENTATION.md  OPTIMIZATION_FIXES.md  REDIS_8_HASH_EXPIRATION.md  REFACTORING_SUMMARY.md  Redis_Information  TEST_SCRIPTS_README.md  debug_test.py  fix_claude_bloom.sh  fix_claude_bloom2.sh  interactive_client.py  phase3_test.jsonl  phase3_test_fixed.jsonl  protocol_test.py  quick_test.py  test_bloom_filter.py  test_bloom_fix.sh  test_events.py  test_events.sh  test_final.sh  test_from_jsonl.py  test_input_validation.py  test_interactive.sh  test_lua_simple.sh  test_manual.sh  test_mcp_complete.py  test_mcp_recall.py  test_mcp_think.py  test_merge_branch_continue.py  test_minimal.jsonl  test_optimizations.py  test_phase1_final.sh  test_proper_mcp.py  test_recall_debug.py  test_search_debug.py  test_search_optimization.py  (+8 more)
unified-think/docs/: TIME_SERIES_METRICS.md
unified-think/documents/: CRITICAL_FINDINGS.md
unified-think/src/: embeddings.rs  error.rs  handlers.rs  lua_scripts.rs  main.rs  models.rs  rate_limit.rs  redis.rs  repository.rs  search_optimization.rs  service.rs  validation.rs
unified-think/test-scripts/: TEST_SUMMARY.md  test_edge_cases.py  test_enhanced_recall.py  test_mcp_debug.py  test_recall_actions.py  test_sequential.sh  test_simple.sh  test_validation_simple.py  verify_cache_issue.py  working_test.py
(+264 files in other folders)
