[package]
name = "bot-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.25"
chrono = "0.4"
colored = "2.0"
rustyline = "13.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "bot"
path = "src/main.rs"