[package]
name = "obsidian-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server for Obsidian vault operations"
authors = ["Federation CC <cc@legacymind.dev>"]
license = "MIT"
repository = "https://github.com/LegacyMind/obsidian-mcp"

[dependencies]
# MCP Framework - Using latest version consistent with Federation
rmcp = { version = "0.3.0", features = ["transport-io"] }
rmcp-macros = "0.3.0"

# Core async runtime and utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization and JSON Schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# UUID generation for resource identification
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling for file metadata
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.3"
notify = "6.0"

# Text processing for Obsidian markdown
regex = "1.10"
pulldown-cmark = "0.10"

# Configuration
config = "0.14"

# Redis integration for Federation consistency
redis = { version = "0.27", features = ["tokio-comp", "json"] }
deadpool = "0.12"
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "obsidian-mcp"
path = "src/main.rs"