[package]
name = "unified-intelligence"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.2.1", features = ["transport-io"] }
rmcp-macros = "0.2.1"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "json"] }
deadpool = "0.12"
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
sha2 = "0.10"
colored = "2.0"
# pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"] }
# pythonize = "0.21"

# [build-dependencies]
# pyo3-build-config = { version = "0.21", features = ["resolve-config"] }

[dev-dependencies]
mockall = "0.12"
