[package]
name = "unified-mind"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP framework
rmcp = { version = "0.3.0", features = ["transport-io"] }
rmcp-macros = "0.3.0"
schemars = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Redis with async support
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Qdrant client
qdrant-client = "=1.12.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Hashing
md5 = "0.7"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "unified-mind"
path = "src/main.rs"