[package]
name = "unified-intelligence-rust"
version = "3.0.0"
edition = "2021"
authors = ["Sam Atagana <sam@samataganaphotography.com>"]
description = "High-performance cognitive enhancement MCP service"
license = "MIT"

[dependencies]
# MCP Framework
rmcp = { version = "0.2", features = ["server", "macros", "transport-io"] }
rmcp-macros = "0.2"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "json", "cluster", "streams", "connection-manager"] }
deadpool-redis = "0.18"

# Error Handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3